hphp/test/slow/sealed/sealed_classes11.php.expectf
Fatal error: Class undefined: SomeTrait2 in %s/test/slow/sealed/sealed_classes11.php on line 16
